[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "shaphypetune"
authors = [{name = "Marco Cerliani", email = "cerlymarco@gmail.com"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    'numpy',
    'scipy',
    'scikit-learn>=0.24.1',
    'shap>=0.39.0',
    'hyperopt==0.2.5'
]

requires-python = ">=3"

[project.urls]
Home = "https://github.com/cerlymarco/shap-hypetune"